--- a/test.html
+++ b/test.html
@@ -24,6 +24,31 @@
 </head>
 <body>
 
+<div id="c2canvasdiv" cert_name="Ing. Electronica en automatizacion y control" cert_issuer="ESPE">dasd</div>
+<script>
+const cert_canvas=document.getElementById("c2canvasdiv");
+let cert_name =cert_canvas.getAttribute('cert_name');
+let cert_issuer=cert_canvas.getAttribute('cert_issuer');
+const cert_card = document.createElement('a');
+cert_card.setAttribute('href','#');
+const cert_body = document.createElement('div');
+//onmouseover="this.style.color='orange';" onmouseout="this.style.color='';"
+cert_body.setAttribute('style','text-align: center; box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); transition: 0.3s; width: 150px; height: 270px; border: 2px solid grey; border-radius: 5px; padding: 5px;');
+cert_body.setAttribute('onmouseover',"this.style.box-shadow='0 8px 16px 0 rgba(0,0,0,0.2);'");
+cert_body.setAttribute('onmouseout',"this.style.box-shadow=''");
+const cert_img = document.createElement('img');
+cert_img.setAttribute('src', 'https://thiagoprado.com/demo/learning/overlay-menu.png');
+cert_img.setAttribute('style','height: 105px; width:105px;');
+const cert_container = document.createElement('div');
+cert_container.setAttribute('style','padding: 2px 16px;');
+cert_container.innerHTML='<h4><b>'+cert_name+'</b></h4><p>Issuer: '+cert_issuer+'</p>';
+cert_body.appendChild(cert_img);
+cert_body.appendChild(cert_container);
+cert_card.appendChild(cert_body);
+cert_canvas.replaceChild(cert_card, cert_canvas.childNodes[0]);
+</script>
+
+
 <h2>Card</h2>
 <a href="#">
 <div class="card" style="text-align: center;">
@@ -37,12 +62,11 @@ style="width:100%">
 </div>
 </a>
 </br>
-<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5de3b8ea-ce6b-4553-9ec5-ea6fdbbb8306" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="5de3b8ea-ce6b-4553-9ec5-ea6fdbbb8306" data-share-badge-host="https://www.credly.com">DIPLOMADO EN GESTION DE RIESGOS</div><script type="text/javascript" async src="https://cdn.credly.com/assets/utilities/embed.js"></script>
 </br>
 <a href="#12">
 <div class="card">
-  <img style="height: 105px; width:105px;" src="img_avatar.png" 
-alt="Avatar" style="width:100%">
+  <img style="height: 105px; width:105px;" src="img_avatar.png" alt="Avatar" style="width:100%">
   <div class="container">
     <h4><b>John Doe</b></h4> 
     <p>Architect & Engineer</p> 
